--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,92 +1,113 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- Include Head -->
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link width="" rel="shortcut icon" href="../public/images/loniaz.png" /> 
-	
+	<link width="" rel="shortcut icon" href="../public/images/loniaz.png" />
+
 	<title> Mercado Liebre Argentina</title>
-			<!-- Font Awesome Stylesheet -->
+	<!-- Font Awesome Stylesheet -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 	<!-- Bootstrap Grid Stylesheet -->
 	<link rel="stylesheet" href="../css/bootstrap-grid.min.css">
 	<!-- Own Stylesheet -->
 	<link rel="stylesheet" href="../css/app.css">
 </head>
+
 <body>
 	<!-- Header -->
 	<%- include('./partials/header.ejs') %>
-	<!-- /Header -->
+		<!-- /Header -->
 
-<!-- Banner -->
-<div class = 'banner'>
-	<img src="images/Captura de Pantalla 2023-04-10 a la(s) 12.05.44.png" alt="Banner de ofertas"></div>
-<!-- /Banner -->
-
-	<!--Novedades -->
-	<br><br><br><br><br><br><br><br><br><br><br>
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Obras de arte más buscadas</h2>
-			</div>
-		
-			<section class="bloque">
-			<% for (let i=0; i<5; i++) { %>
-				<div class="col-12 col-sm-6 col-lg-3">
-						<section class="product-box">
-							<a href= "/products/detalle/id/<%=lista[i].id%>">
-								<figure class="product-box_image">
-									<img src="<%=lista[i].imagen%>" alt="<%=lista[i].nombre%>">
-								</figure>
-								<article class="product-box_data">
-									<h2> <%= lista[i].nombre%> </h2>
-									<p><%= lista[i].Técnica%></p>
-									<p><%= lista[i].Dimensiones%></p>
-									<p><%= lista[i].Creación%></p>
-								</article>
-							</a>
-						</section>
-					</div>
-				<% } %>
+		<!-- Banner -->
+		<div class='banner'>
+			<img src="images/Captura de Pantalla 2023-04-10 a la(s) 12.05.44.png" alt="Banner de ofertas">
 		</div>
-	</div>
-</section>
+		<!-- /Banner -->
 
-	<!-- /Novedades --> 
-	<!-- Más comentados -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Obras de arte más comentados</h2>
-			</div>
-			<!-- Show the "ultimos" products -->
-			<section class="bloque">
-				<% for (let i=5; i<10; i++) { %>
-					<div class="col-12 col-sm-6 col-lg-3">
+		<!--Novedades -->
+		<br><br><br><br><br><br><br><br><br><br><br>
+		<div class="container products-wrapper">
+			<div class="row">
+				<div class="col-12">
+					<h2 class="products-title">Obras de arte más buscadas</h2>
+				</div>
+
+				<section class="bloque">
+					<% for (let i=0; i<5; i++) { %>
+						<div class="col-12 col-sm-6 col-lg-3">
 							<section class="product-box">
-								<a href= "/products/detalle/id/<%=lista[i].id%>">
+								<a href="/products/detalle/id/<%=lista[i].id%>">
 									<figure class="product-box_image">
 										<img src="<%=lista[i].imagen%>" alt="<%=lista[i].nombre%>">
 									</figure>
 									<article class="product-box_data">
-										<h2> <%= lista[i].nombre%> </h2>
-										<p><%= lista[i].Técnica%></p>
-										<p><%= lista[i].Dimensiones%></p>
-										<p><%= lista[i].Creación%></p>
+										<h2>
+											<%= lista[i].nombre%>
+										</h2>
+										<p>
+											<%= lista[i].Técnica%>
+										</p>
+										<p>
+											<%= lista[i].Dimensiones%>
+										</p>
+										<p>
+											<%= lista[i].Creación%>
+										</p>
 									</article>
 								</a>
 							</section>
 						</div>
-					<% } %>
+						<% } %>
 			</div>
 		</div>
-	</section>
-			
+		</section>
 
-	<!-- footer -->
-	<%- include('./partials/footer') %>
-	<!-- /footer -->
-</body>	
+		<!-- /Novedades -->
+		<!-- Más comentados -->
+		<div class="container products-wrapper">
+			<div class="row">
+				<div class="col-12">
+					<h2 class="products-title">Obras de arte más comentados</h2>
+				</div>
+
+				
+				<!-- Show the "ultimos" products -->
+				<section class="bloque">
+					<% for (let i=5; i<10; i++) { %>
+						<div class="col-12 col-sm-6 col-lg-3">
+							<section class="product-box">
+								<a href="/products/detalle/id/<%=lista[i].id%>">
+									<figure class="product-box_image">
+										<img src="<%=lista[i].imagen%>" alt="<%=lista[i].nombre%>">
+									</figure>
+									<article class="product-box_data">
+										<h2>
+											<%= lista[i].nombre%>
+										</h2>
+										<p>
+											<%= lista[i].Técnica%>
+										</p>
+										<p>
+											<%= lista[i].Dimensiones%>
+										</p>
+										<p>
+											<%= lista[i].Creación%>
+										</p>
+									</article>
+								</a>
+							</section>
+						</div>
+						<% } %>
+			</div>
+		</div>
+		</section>
+
+		<!-- footer -->
+		<%- include('./partials/footer') %>
+			<!-- /footer -->
+</body>
+
 </html>
