--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -19,42 +19,49 @@
 <body>
 	<!-- Header -->
 	<%- include('./partials/header.ejs') %>
-	<!-- /Header -->
+		<!-- /Header -->
 
-	<!-- Novedades -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Resultados de búsqueda</h2>
-			</div>
-			<!-- Show the "ultimos" products -->
+		<!-- Novedades -->
+		<div class="container products-wrapper">
+			<div class="row">
+				<div class="col-12">
+					<h2 class="products-title">Resultados que coinciden con su búsqueda:</h2>
+				</div>
+				<!-- Show the "ultimos" products -->
 
 
-			
-			<div class="container products-wrapper">
-				<div class="row">
+
+				<section class="bloque">
 					<%for (let i=0; i<4; i++){ %>
-					<div>
-						<section>
-							<a href="/products/detalle/id/<%=lista[i].id%>"> 
-								<figure class="product-box_image">
-									<img src="<%=lista[i].imagen%>" alt="<%=lista[i].nombre%>">
-								</figure>
-								<article class="product-box_data">
-									<h2><%=lista[i].nombre%></h2>
-									<p><%=lista[i].descripcion%></p>
-									<p><%=lista[i].comentarios%></p> 
-								</article>
-							</a>
-						</section>
-					</div>
-					<%}%>
-			
+						<div class="col-12 col-sm-6 col-lg-3">
+							<section class = 'product-box'>
+								<a href="/products/detalle/id/<%=lista[i].id%>">
+									<figure class="product-box_image">
+										<img src="<%=lista[i].imagen%>" alt="<%=lista[i].nombre%>">
+									</figure>
+									<article class="product-box_data">
+										<h2>
+											<%=lista[i].nombre%>
+										</h2>
+										<p>
+											<%=lista[i].descripcion%>
+										</p>
+										<p>
+											<%=lista[i].comentarios%>
+										</p>
+									</article>
+								</a>
+							</section>
+						</div>
+						<%}%>
+			</div>
+		</div>
+		</section>
 
 
-	<!-- footer -->
-	<%- include('./partials/footer') %>
-	<!-- /footer -->
+		<!-- footer -->
+		<%- include('./partials/footer') %>
+			<!-- /footer -->
 </body>
 
 </html>
